[package]
name = "gogdl_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
open = "5.3.2"
reqwest = { version = "0.12.23",default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.7"
once_cell = "=1.21.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
