[package]
name = "gogdl_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
flutter_rust_bridge = "=2.11.1"
gogdl_rs = { git = "https://github.com/fernandonr189/gogdl_rs.git", branch = "main" }
tokio = "1.47.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
